<?xml version="1.0" encoding="utf-8"?><!--Main language norwegian (NO)-->
<resources>

    <!--    MAIN SCREEN     -->
    <string name="app_name">Mattequiz</string>
    <string name="start_game">Start spillet</string>
    <string name="show_stats">Statistikk</string>
    <string name="preferences">Preferanser</string>


    <!--        GAME VIEW STRINGS       -->
    <string name="btn_game_one" translatable="false">1</string>
    <string name="btn_game_two" translatable="false">2</string>
    <string name="btn_game_three" translatable="false">3</string>
    <string name="btn_game_four" translatable="false">4</string>
    <string name="btn_game_five" translatable="false">5</string>
    <string name="btn_game_six" translatable="false">6</string>
    <string name="btn_game_seven" translatable="false">7</string>
    <string name="btn_game_eight" translatable="false">8</string>
    <string name="btn_game_nine" translatable="false">9</string>
    <string name="btn_game_zero" translatable="false">0</string>

    <string name="btn_game_erase">Slett</string>
    <string name="submit_answer">Svar</string>

    <!--        Game dialogs        -->
    <string name="dialog_cancel_game">Avslutte spill?</string>
    <string name="main_screen">Gå til startskjermen</string>
    <string name="answer_not_submitted">Du må gi et svar!</string>
    <string name="dialog_yes">Ja</string>
    <string name="dialog_no">Nei</string>

    <!--        Statistics      -->
    <string name="scores">Poengsummer</string>

    <!--        Preferences     -->
    <string name="change_language">Velg språk</string>
    <string name="norwegian">Norsk</string>
    <string name="german">Tysk</string>
    <array name="languages_array">
        <item>@string/norwegian</item>
        <item>@string/german</item>
    </array>

    <!--    The array values holds the corresponding language codes    -->
    <string name="language_default" translatable="false">no</string>
    <array name="languages_array_values">
        <item>"no"</item>
        <item>"de"</item>
    </array>

    <string name="total_questions_title">Antall Spørsmål</string>
    <string name="total_questions_summary">Endre  spørsmål i spillet</string>
    <string name="questions_default" translatable="false">5</string>
    <string-array name="question_entries_preferences">
        <item>5</item>
        <item>10</item>
        <item>15</item>
    </string-array>


    <string name="reset_stats">Nullstill</string>
    <string name="reset_stats_summary">Nullstill statistikk og preferanser</string>
    <string name="reset_stats_success">Alle preferanser nullstilt</string>


    <!--        Game end header     -->
    <string name="game_end_header">Din poengsum:</string>

    <!--    Game questions  -->
    <!--Last item is the answer-->

    <string-array name="question1">
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
    </string-array>
    <string-array name="question2">
        <item>"14"</item>
        <item>"9"</item>
        <item>"23"</item>
    </string-array>
    <string-array name="question3">
        <item>"5"</item>
        <item>"18"</item>
        <item>"23"</item>
    </string-array>
    <string-array name="question4">
        <item>"14"</item>
        <item>"17"</item>
        <item>"31"</item>
    </string-array>
    <string-array name="question5">
        <item>"4"</item>
        <item>"3"</item>
        <item>"7"</item>
    </string-array>
    <string-array name="question6">
        <item>"33"</item>
        <item>"11"</item>
        <item>"44"</item>
    </string-array>
    <string-array name="question7">
        <item>"17"</item>
        <item>"4"</item>
        <item>"21"</item>
    </string-array>
    <string-array name="question8">
        <item>"18"</item>
        <item>"24"</item>
        <item>"42"</item>
    </string-array>
    <string-array name="question9">
        <item>"13"</item>
        <item>"6"</item>
        <item>"19"</item>
    </string-array>
    <string-array name="question10">
        <item>"12"</item>
        <item>"8"</item>
        <item>"20"</item>
    </string-array>
    <string-array name="question11">
        <item>"5"</item>
        <item>"5"</item>
        <item>"10"</item>
    </string-array>
    <string-array name="question12">
        <item>"7"</item>
        <item>"8"</item>
        <item>"15"</item>
    </string-array>
    <string-array name="question13">
        <item>"2"</item>
        <item>"2"</item>
        <item>"4"</item>
    </string-array>
    <string-array name="question14">
        <item>"5"</item>
        <item>"1"</item>
        <item>"6"</item>
    </string-array>
    <string-array name="question15">
        <item>"0"</item>
        <item>"0"</item>
        <item>"0"</item>
    </string-array>

    <!--Array container for all the questions-->
    <array name="questions_container">
        <item>@array/question1</item>
        <item>@array/question2</item>
        <item>@array/question3</item>
        <item>@array/question4</item>
        <item>@array/question5</item>
        <item>@array/question6</item>
        <item>@array/question7</item>
        <item>@array/question8</item>
        <item>@array/question9</item>
        <item>@array/question10</item>
        <item>@array/question11</item>
        <item>@array/question12</item>
        <item>@array/question13</item>
        <item>@array/question14</item>
        <item>@array/question15</item>
    </array>

</resources>