<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Match"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="5dp"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/txt_game_progress"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textAlignment="viewEnd"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_question"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/txt_answer"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="28sp" />

    <GridLayout
        style="@style/Wrap"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:columnCount="3"
        android:orientation="horizontal"
        android:rowCount="4"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/button_game_one"
            style="@style/numPadButton"
            android:text="@string/btn_game_one" />

        <Button
            android:id="@+id/button_game_two"
            style="@style/numPadButton"
            android:text="@string/btn_game_two" />

        <Button
            android:id="@+id/button_game_three"
            style="@style/numPadButton"
            android:text="@string/btn_game_three" />


        <Button
            android:id="@+id/button_game_four"
            style="@style/numPadButton"
            android:text="@string/btn_game_four" />

        <Button
            android:id="@+id/button_game_five"
            style="@style/numPadButton"

            android:text="@string/btn_game_five" />

        <Button
            android:id="@+id/button_game_six"
            style="@style/numPadButton"

            android:text="@string/btn_game_six" />


        <Button
            android:id="@+id/button_game_seven"
            style="@style/numPadButton"
            android:text="@string/btn_game_seven" />

        <Button
            android:id="@+id/button_game_eight"
            style="@style/numPadButton"
            android:text="@string/btn_game_eight" />

        <Button
            android:id="@+id/button_game_nine"
            style="@style/numPadButton"
            android:text="@string/btn_game_nine" />


        <android.support.v4.widget.Space style="@style/numPadButton"

            />

        <Button
            android:id="@+id/button_game_zero"
            style="@style/numPadButton"
            android:text="@string/btn_game_zero" />

        <ImageButton
            android:id="@+id/button_game_delete"
            style="@style/numPadButton"
            android:contentDescription="@string/btn_game_erase"
            app:srcCompat="@drawable/ic_backspace" />

    </GridLayout>

    <ImageButton
        android:id="@+id/button_submit_answer"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/orange"
        android:contentDescription="@string/submit_answer"
        app:srcCompat="@drawable/ic_submit" />

</android.widget.LinearLayout>