<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_play_button" />

    <ImageButton
        android:id="@+id/button_start_game"
        style="@style/main_screen_button"
        android:contentDescription="@string/start_game"
        app:srcCompat="@drawable/ic_play_button" />


    <ImageButton
        android:id="@+id/button_stats"
        style="@style/main_screen_button"
        android:backgroundTint="@color/orange"
        android:contentDescription="@string/show_stats"
        app:srcCompat="@drawable/ic_chart" />


    <ImageButton
        android:id="@+id/button_preferences"
        style="@style/main_screen_button"
        android:backgroundTint="@color/orange"
        android:contentDescription="@string/preferences"
        app:srcCompat="@drawable/ic_settings_cog" />


</android.widget.LinearLayout>